classDiagram

ScooterApp "1" --o "*" User
ScooterApp "1" --o "*" Scooter
User "1" <--> "1" Scooter

class Scooter{
    +string station
    +string user
    +int serial
    +int charge
    +bool isBroken
    +bool docked
    +rent()
    +dock(station)
    +recharge()
    +requestRepair()
}

class User{
    +string username
    +string password
    +int age
}

class ScooterApp{
    +object stations
    +object registeredUsers
    +register(user)
    +logIn(username, password)
    +addScooter(location, scooter)
    +removeScooter(scooterToRemove)
}